<resources>
    <string name="app_name">Represent</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="google_app_id">represent-196cf</string>

    <string name="rep_name">Dianne Feinstein</string>
    <string name="rep_party">Democrat</string>
    <string name="rep_term">1/3/2019</string>
    <string name="rep_site">feinstein.senate.gov</string>

    <string name="rep1_tweet">"Speaking on the Senate floor now about the Supreme Court vacancy"</string>
    <string name="rep1_name">Dianne Feinstein</string>
    <string name="rep1_party">Democrat</string>
    <string name="rep1_email">senator@feinstein.senate.gov</string>
    <string name="rep1_site">feinstein.senate.gov</string>

    <string name="rep2_tweet">"2Speaking on the Senate floor now about the Supreme Court vacancy"</string>
    <string name="rep2_name">2Dianne Feinstein</string>
    <string name="rep2_party">2Democrat</string>
    <string name="rep2_email">2senator@feinstein.senate.gov</string>
    <string name="rep2_site">2feinstein.senate.gov</string>

    <string name="rep3_tweet">"3Speaking on the Senate floor now about the Supreme Court vacancy"</string>
    <string name="rep3_name">3Dianne Feinstein</string>
    <string name="rep3_party">3Democrat</string>
    <string name="rep3_email">3senator@feinstein.senate.gov</string>
    <string name="rep3_site">3feinstein.senate.gov</string>
    <string name="title_activity_detailed">DetailedActivity</string>
</resources>
