<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/rep1"
        android:background="@color/darkblue"
        android:layout_weight="0.33"
        android:paddingBottom="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rep1_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/dianne_feinstein"
            app:civ_border_width="4dp"
            app:civ_border_color="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="15dp"
            android:text="@string/rep1_name"
            android:textColor="@color/white"
            android:textSize="@dimen/dgts__title_text_size"
            android:id="@+id/rep1_name"
            android:layout_below="@id/rep1_img"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/rep1_party"
            android:textColor="@color/white"
            android:textSize="@dimen/tw__card_font_size_small"
            android:id="@+id/rep1_party"
            android:layout_below="@id/rep1_name"
            android:layout_alignParentStart="true"/>
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/right_portion"
            android:layout_toRightOf="@+id/rep1_img">
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/rep1_tweet"
                android:textColor="@color/white"
                android:textSize="@dimen/tw__card_font_size_small"
                android:id="@+id/rep1_tweet"
                android:background="@drawable/round_blue"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingStart="15dp"
                android:text="Email"
                android:textColor="@color/white"
                android:textSize="@dimen/tw__card_font_size_small"
                android:autoLink="web"
                android:id="@+id/email_txt"
                android:layout_below="@id/rep1_tweet"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingStart="15dp"
                android:text="@string/rep1_email"
                android:textColor="@color/grey"
                android:textColorLink="@color/grey"
                android:textSize="12dp"
                android:autoLink="email"
                android:id="@+id/rep1_email"
                android:layout_below="@id/email_txt"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingStart="15dp"
                android:text="Website"
                android:textColor="@color/white"
                android:textSize="@dimen/tw__card_font_size_small"
                android:autoLink="web"
                android:id="@+id/site_txt"
                android:layout_below="@id/rep1_email"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingStart="15dp"
                android:text="@string/rep1_site"
                android:textColor="@color/grey"
                android:textColorLink="@color/grey"
                android:textSize="12dp"
                android:autoLink="web"
                android:id="@+id/rep1_site"
                android:layout_below="@id/site_txt"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>